tests/ui/target_modifiers/incompatible_llvm_target_feature.error_generated.stderr
'+another-feature' is not a recognized feature for this target (ignoring feature)
error: mixing `-Zllvm-target-feature` will cause an ABI mismatch in crate `incompatible_llvm_target_feature`
  --> $DIR/incompatible_llvm_target_feature.rs:12:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Zllvm-target-feature` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Zllvm-target-feature=+another-feature` in this crate is incompatible with `-Zllvm-target-feature=+fake-feature` in dependency `wrong_llvm_target_feature`
   = help: set `-Zllvm-target-feature=+fake-feature` in this crate or `-Zllvm-target-feature=+another-feature` in `wrong_llvm_target_feature`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=llvm-target-feature` to silence this error

error: aborting due to 1 previous error

